--- a/my-website/src/css/custom.css
+++ b/my-website/src/css/custom.css
@@ -27,6 +27,15 @@ html {
     font-size: 2.6rem;
 }
 
+.quotation {
+    width: 20%;
+    filter:
+    invert(.6);
+    margin-right: 1em;
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+}
+
 aside{
     background-color: var(--ifm-dropdown-background-color);
     /* --ifm-toc-border-color: transparent; */
